--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -23,10 +24,12 @@
         "pk.eyJ1IjoidmVnYXJkMTk5MCIsImEiOiJjamtsYXdjZm4wMWljM3ZxcmUyOHJoNnBwIn0.sCjF-dZIu4TN21N0GhmFdg";
       const map = new mapboxgl.Map({
         container: "map",
-        style: "mapbox://styles/vegard1990/cm7b56vqd004x01s8cadtdd87",
+        style: "mapbox://styles/vegard1990/cm7dcs3tn009l01ryfmw4enmw",
         center: [20.302734, 73.578167],
         zoom: 3,
-        projection: "mercator"
+        projection: "mercator",
+        dragRotate: false,
+        touchZoomRotate: false
       });
       map.setRenderWorldCopies(true);
 
@@ -69,20 +72,24 @@
           },
         });
 
-        // Layer to display vessel names on the map
-        map.addLayer({
-          id: "vessels-label",
-          type: "symbol",
-          source: "vessels",
-          layout: {
-            "text-field": ["get", "shipName"],
-            "text-offset": [0, 1.2],
-            "text-size": 10
-          },
-          paint: {
-            "text-color": "#ffffff"
-          }
-        });
+        // Layer to display vessel names on the map (visible from zoom level 6 and above)
+map.addLayer({
+  id: "vessels-label",
+  type: "symbol",
+  source: "vessels",
+  minzoom: 6,
+  layout: {
+    "text-field": ["get", "shipName"],
+    "text-transform": "uppercase",
+    "text-offset": [0, 1.2],
+    "text-size": 10,
+    "text-font": ["DIN Pro Bold", "Arial Unicode MS Regular"]
+  },
+  paint: {
+    "text-color": "#ffffff"
+  }
+});
+
 
         // Hover event: Show popup when mouse enters a vessel dot
         map.on("mouseenter", "vessels-layer", (e) => {
@@ -110,31 +117,37 @@
           hoverPopup.remove();
         });
 
-        // Click event: Show detailed popup on click
-        map.on("click", "vessels-layer", (e) => {
-          const feature = map.queryRenderedFeatures(e.point, {
-            layers: ["vessels-layer"]
-          })[0];
-          if (!feature) return;
-          const localTime = new Date(feature.properties.msgtime).toLocaleString();
-          const detailedPopupContent = `
-            <strong>${feature.properties.shipName || "Unnamed Ship"}</strong><br>
-            Country: ${feature.properties.country || "Unknown"}<br>
-            MMSI: ${feature.properties.mmsi}<br>
-            Time: ${localTime}<br>
-            Course: ${feature.properties.courseOverGround || "N/A"}<br>
-            Speed: ${feature.properties.speedOverGround || "N/A"}<br>
-            Navigational Status: ${feature.properties.navigationalStatus}<br>
-            Destination: ${feature.properties.destination || "N/A"}<br>
-            ETA: ${feature.properties.eta || "N/A"}<br>
-            Ship Type: ${feature.properties.shipType || "N/A"}<br>
-            True Heading: ${feature.properties.trueHeading || "N/A"}
-          `;
-          new mapboxgl.Popup()
-            .setLngLat(feature.geometry.coordinates)
-            .setHTML(detailedPopupContent)
-            .addTo(map);
-        });
+        // Click event: Show detailed popup on click with larger hit area
+map.on("click", "vessels-layer", (e) => {
+    // Query a 20x20 pixel box around the click point
+    const features = map.queryRenderedFeatures([
+        [e.point.x - 5, e.point.y - 5],
+        [e.point.x + 5, e.point.y + 5]
+    ], {
+        layers: ["vessels-layer"]
+    });
+    if (!features.length) return;
+    const feature = features[0];
+    const localTime = new Date(feature.properties.msgtime).toLocaleString();
+    const detailedPopupContent = `
+        <strong>${feature.properties.shipName || "Unnamed Ship"}</strong><br>
+        Country: ${feature.properties.country || "Unknown"}<br>
+        MMSI: ${feature.properties.mmsi}<br>
+        Time: ${localTime}<br>
+        Course: ${feature.properties.courseOverGround || "N/A"}<br>
+        Speed: ${feature.properties.speedOverGround || "N/A"}<br>
+        Navigational Status: ${feature.properties.navigationalStatus}<br>
+        Destination: ${feature.properties.destination || "N/A"}<br>
+        ETA: ${feature.properties.eta || "N/A"}<br>
+        Ship Type: ${feature.properties.shipType || "N/A"}<br>
+        True Heading: ${feature.properties.trueHeading || "N/A"}
+    `;
+    new mapboxgl.Popup()
+        .setLngLat(feature.geometry.coordinates)
+        .setHTML(detailedPopupContent)
+        .addTo(map);
+});
+
 
         // Listen for realtime updates from Firebase at the "vessels" node
         db.ref("vessels").on("value", (snapshot) => {
