--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -29,7 +28,7 @@
         zoom: 3,
         projection: "mercator",
         dragRotate: false,
-        touchZoomRotate: false
+        touchRotate: false
       });
       map.setRenderWorldCopies(true);
 
