--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
       // Initialize Mapbox
       mapboxgl.accessToken =
         "pk.eyJ1IjoidmVnYXJkMTk5MCIsImEiOiJjamtsYXdjZm4wMWljM3ZxcmUyOHJoNnBwIn0.sCjF-dZIu4TN21N0GhmFdg";
-      const map = new mapboxgl.Map({
-        container: "map",
-        style: "mapbox://styles/vegard1990/cm7dcs3tn009l01ryfmw4enmw",
-        center: [20.302734, 73.578167],
-        zoom: 3,
-        projection: "mercator",
-        dragRotate: false,
-        touchRotate: false
-      });
-      map.setRenderWorldCopies(true);
+        const map = new mapboxgl.Map({
+  container: "map",
+  style: "mapbox://styles/vegard1990/cm7dcs3tn009l01ryfmw4enmw",
+  center: [20.302734, 73.578167],
+  zoom: 3,
+  projection: "mercator",
+  dragRotate: false, // disables rotation via mouse drag
+  touchZoomRotate: { rotate: false } // disables rotation on touch, but still allows zoom
+});
+map.setRenderWorldCopies(true);
 
       // Firebase configuration (replace with your actual details)
       const firebaseConfig = {
